all code change but still not responsive

--- a/index.html
+++ b/index.html
@@ -10,21 +10,40 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="main.css"> 
+        <script src="https://kit.fontawesome.com/194c17da06.js" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
 
   <body>
-      <div class="logo">
-        <img src="logo.svg">
-      </div>
-   <div class="container">
-      <div class="illustration">
-        <img src="illustration-mockups.svg" alt="">
-      </div>
-      <div class="text">
-          <h1>Build The Community Your Fans Will Love</h1>
-          <p>Huddle re-imagines the way we build communities.You have a voice, but so does your audience.Create connections with your users as you engage in genuine discussion.</p>
-          <button class="button">Register</button>
-      </div>
-        
-    </div>
+      <header>
+        <div class="header"><img src="logo.svg" alt="logo"></div>
+      </header>
+
+
+      <main>
+        <div class="container">
+          <div class="illustration">
+            <img src="illustration-mockups.svg" alt="illustration">
+          </div>
+          <div class="text">
+            <h1>Build The Community Your Fans Will Love</h1>
+            <p>Huddles re-imagine the way we build community.You have a voice,so does your audience.Create connection with your users as you engage in genuine discussion.</p>
+            <button class="Register">Register</button>
+          </div>
+        </div>
+      </main>
+
+
+      <footer>
+          <div class="contact">
+            <div class="logo"> <i class="fa-brands fa-facebook-f fa-lg" style="color: #ffffff;"></i></div>
+            <div class="logo"><i class="fa-brands fa-twitter fa-lg" style="color: #fafafa;"></i></div>
+            <div class="logo"><i class="fa-brands fa-instagram fa-lg" style="color: #ffffff;"></i></div>
+          </div>
+      </footer>
+
   </body>
+ 
+  
+  
