--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="text">
             <h1>Build The Community Your Fans Will Love</h1>
-            <p>Huddles re-imagine the way we build community.You have a voice,so does your audience.Create connection with your users as you engage in genuine discussion.</p>
+            <p>Huddles re-imagine the way we build community. You have a voice, but so does your audience. Create connection with your users as you engage in genuine discussion.</p>
             <button class="Register">Register</button>
           </div>
         </div>
